<resources>
    <string name="app_name">My First Demo</string>
    <string name="practice">Practice</string>
    <string name="assignment_1">Assignment 1</string>
    <string name="log_cat">Log Cat</string>
    <string name="toast">Toast</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="you_are">You are</string>
    <string name="click_on_calculate_bmi_to_find_your_bmi">Click on Calculate BMI to find your BMI</string>
    <string name="inches">inches</string>
    <string name="feet">feet</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="height">Height</string>
    <string name="lb">lb</string>
    <string name="your_weight_in_pounds">Your weight in pounds</string>
    <string name="weight">Weight</string>
    <string name="body_mass_index_bmi">Body Mass Index (BMI)</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="awesome">Awesome</string>
    <string name="edit_profile">Edit Profile Activity</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="display_profile">Display Profile</string>
    <string name="i_am">I am</string>
    <string name="i_use">I use</string>
    <string name="email">Email:</string>
    <string name="todo">TODO</string>
    <string name="name_input">Name:</string>
    <string name="name">Name</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="your_current_mood">Your current mood:</string>
    <string name="submit">Submit</string>
    <string name="e_mail">E-mail</string>
    <string name="select_your_avatar">Select your avatar</string>
    <string name="assignment_2">Assignment 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assignment_3">Assignment 3</string>
    <string name="select_complexity">Select Complexity</string>
    <string name="_1_time">1 time</string>
    <string name="minimum">Minimum:</string>
    <string name="maximum">Maximum:</string>
    <string name="average">Average:</string>
    <string name="generate_number">Generate Number</string>
    <string name="assignment_4">Assignment 4</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="go">Go</string>
    <string name="loading">Loading…</string>
    <string name="assignment_5">Assignment 5</string>
    <string name="assignment_6">Assignment 6</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
</resources>