<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass01">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inch_input"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:hint="@string/inches"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feet_input"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/body_mass_index_bmi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/weight_input"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:hint="@string/your_weight_in_pounds"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_text" />

    <TextView
        android:id="@+id/lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/lb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/weight_input"
        app:layout_constraintTop_toTopOf="@+id/weight_input" />

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/height"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_input" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feet_input"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:hint="@string/feet"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_text"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/feet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feet"
        app:layout_constraintStart_toEndOf="@+id/feet_input"
        app:layout_constraintTop_toTopOf="@+id/feet_input" />

    <TextView
        android:id="@+id/inch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inches"
        app:layout_constraintStart_toEndOf="@+id/inch_input"
        app:layout_constraintTop_toTopOf="@+id/inch_input" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_on_calculate_bmi_to_find_your_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_are"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/calculate_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inch_input" />

</androidx.constraintlayout.widget.ConstraintLayout>