<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/hw4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw3" />

    <Button
        android:id="@+id/hw0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/practice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw0" />

    <Button
        android:id="@+id/hw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw1" />

    <Button
        android:id="@+id/hw3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw2" />

    <Button
        android:id="@+id/hw5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assignment 5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hw4" />
</androidx.constraintlayout.widget.ConstraintLayout>